# CHIP8X

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cpu.cpp  data.cpp  display.cpp  main.cpp
src/include/: cpu.h  data.h  display.h
